Change card flex's to fix bug with wrong size in fullscreen view

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -60,7 +60,7 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
-  flex: 1 0 200px;    
+  flex: 0 0 200px;    
   aspect-ratio: 1 / 1;
   display: flex;
   align-items: center;
